gitops/apps/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: app
  labels:
    app: notification-service
    team: greenlogistics
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: notification-service
        team: greenlogistics
        env: dev
    spec:
      serviceAccountName: notification-service
      containers:
        - name: notification-service
          image: ghcr.io/thibauthi/tp_final_dev_cloud/notification-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /metrics
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /metrics
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: app
  labels:
    app: notification-service
    team: greenlogistics
    env: dev
spec:
  ports:
    - port: 3002
      targetPort: 3002
      name: http
  selector:
    app: notification-service
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-netpol
  namespace: app
  labels:
    app: notification-service
    team: greenlogistics
    env: dev
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 3002
  egress:
    - {}
